--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/event_camera_py
-	previous = 
-	base = 7e78b08
+	previous = 7e78b08
+	base = f311091
 	trim = 
 	trimbase = 
