--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/event_camera_py
-	previous = 
-	base = e559f13
+	previous = e559f13
+	base = 16d0ace
 	trim = 
 	trimbase = 
