--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/event_camera_py
-	previous = 
-	base = 356734c
+	previous = 356734c
+	base = 21ee5ec
 	trim = 
 	trimbase = 
